--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,5 @@
 name: Release
 
-permissions:
-  contents: write
-  id-token: write
-
 on:
   push:
     tags:
@@ -11,24 +7,6 @@ on:
 
 jobs:
   release:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v5
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-node@v5
-        with:
-          node-version: lts/*
-          registry-url: https://registry.npmjs.org/
-      - run: npm ci
-      - name: Generate GitHub changelog
-        run: npx changelogithub
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Update npm
-        run: npm install -g npm@latest
-      - name: Publish to npm
-        run: npm whoami; npm publish --access public --ignore-scripts
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-          NPM_CONFIG_PROVENANCE: true
+    uses: nicksp/workflows/.github/workflows/release-changelogithub.yml@1b1da121f7104dd2448ee3a403a665247dbbf655 # v1
+    with:
+      publish: true
