--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,12 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v5
-      - name: Use latest LTS Node.js
-        uses: actions/setup-node@v5
-        with:
-          node-version: lts/*
-      - name: npm install and test
-        run: npm cit
+    uses: nicksp/workflows/.github/workflows/test.yml@1b1da121f7104dd2448ee3a403a665247dbbf655 # v1
+    with:
+      skip-lint: true
+      build: ""
