--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,9 @@ on:
 
 jobs:
   release:
-    uses: nicksp/workflows/.github/workflows/release-changelogithub.yml@1b1da121f7104dd2448ee3a403a665247dbbf655 # v1
+    uses: nicksp/workflows/.github/workflows/release-changelogithub.yml@f151adfeb69b6ca51b9d8eba0545b31e6322bb06 # v1
     with:
       publish: true
+    permissions:
+      contents: write
+      id-token: write
