chore: add internal ESLint support

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,4 +14,4 @@ jobs:
     uses: nicksp/workflows/.github/workflows/test.yml@b6dd4a3dc0859745d07187c763e71fedcbb12725 # v1
     with:
       skip-lint: true
-      build: ""
+      build: ''
